gen/RubyParser.py
# Generated from C:/Informatyka_i_systemy_inteligentne/ROK II/Sem_4/Teoria_kompilacji_i_kompilatory/Project/Ruby-2-Python/Project\Ruby.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RubyParser ( Parser ):

    grammarFileName = "Ruby.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "','", "';'", "<INVALID>", 
                     "'require'", "'end'", "'def'", "'return'", "'if'", 
                     "'else'", "'elsif'", "'unless'", "'while'", "'retry'", 
                     "'break'", "'for'", "'true'", "'false'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'**'", "'=='", "'!='", "'>'", 
                     "'<'", "'<='", "'>='", "'='", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'**='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "'nil'" ]

    symbolicNames = [ "<INVALID>", "LITERAL", "COMMA", "SEMICOLON", "CRLF", 
                      "REQUIRE", "END", "DEF", "RETURN", "IF", "ELSE", "ELSIF", 
                      "UNLESS", "WHILE", "RETRY", "BREAK", "FOR", "TRUE", 
                      "FALSE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "EXP", 
                      "EQUAL", "NOT_EQUAL", "GREATER", "LESS", "LESS_EQUAL", 
                      "GREATER_EQUAL", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "EXP_ASSIGN", 
                      "AND", "OR", "NOT", "LEFT_RBRACKET", "RIGHT_RBRACKET", 
                      "LEFT_SBRACKET", "RIGHT_SBRACKET", "NIL", "SINGLE_LINE_COMMENT", 
                      "MULTI_LINE_COMMENT", "WHITE_SPACE", "INT", "FLOAT", 
                      "ID", "ID_GLOBAL" ]

    RULE_prog = 0
    RULE_expression_list = 1
    RULE_expression = 2
    RULE_global_get = 3
    RULE_global_set = 4
    RULE_global_result = 5
    RULE_function_inline_call = 6
    RULE_function_definition = 7
    RULE_function_definition_body = 8
    RULE_function_definition_header = 9
    RULE_function_name = 10
    RULE_function_definition_params = 11
    RULE_function_definition_params_list = 12
    RULE_function_definition_param_id = 13
    RULE_return_statement = 14
    RULE_function_call = 15
    RULE_function_call_param_list = 16
    RULE_function_call_params = 17
    RULE_function_param = 18
    RULE_function_unnamed_param = 19
    RULE_function_named_param = 20
    RULE_function_call_assignment = 21
    RULE_all_result = 22
    RULE_elsif_statement = 23
    RULE_if_elsif_statement = 24
    RULE_if_statement = 25
    RULE_unless_statement = 26
    RULE_while_statement = 27
    RULE_for_statement = 28
    RULE_init_expression = 29
    RULE_all_assignment = 30
    RULE_for_init_list = 31
    RULE_cond_expression = 32
    RULE_loop_expression = 33
    RULE_for_loop_list = 34
    RULE_statement_body = 35
    RULE_statement_expression_list = 36
    RULE_assignment = 37
    RULE_dynamic_assignment = 38
    RULE_int_assignment = 39
    RULE_float_assignment = 40
    RULE_string_assignment = 41
    RULE_initial_array_assignment = 42
    RULE_array_assignment = 43
    RULE_array_definition = 44
    RULE_array_definition_elements = 45
    RULE_array_selector = 46
    RULE_dynamic_result = 47
    RULE_dynamic_ = 48
    RULE_int_result = 49
    RULE_float_result = 50
    RULE_string_result = 51
    RULE_comparison_list = 52
    RULE_comparison = 53
    RULE_comp_var = 54
    RULE_lvalue = 55
    RULE_rvalue = 56
    RULE_break_expression = 57
    RULE_literal_t = 58
    RULE_float_t = 59
    RULE_int_t = 60
    RULE_bool_t = 61
    RULE_nil_t = 62
    RULE_id_ = 63
    RULE_id_global = 64
    RULE_terminator = 65
    RULE_else_token = 66
    RULE_crlf = 67

    ruleNames =  [ "prog", "expression_list", "expression", "global_get", 
                   "global_set", "global_result", "function_inline_call", 
                   "function_definition", "function_definition_body", "function_definition_header", 
                   "function_name", "function_definition_params", "function_definition_params_list", 
                   "function_definition_param_id", "return_statement", "function_call", 
                   "function_call_param_list", "function_call_params", "function_param", 
                   "function_unnamed_param", "function_named_param", "function_call_assignment", 
                   "all_result", "elsif_statement", "if_elsif_statement", 
                   "if_statement", "unless_statement", "while_statement", 
                   "for_statement", "init_expression", "all_assignment", 
                   "for_init_list", "cond_expression", "loop_expression", 
                   "for_loop_list", "statement_body", "statement_expression_list", 
                   "assignment", "dynamic_assignment", "int_assignment", 
                   "float_assignment", "string_assignment", "initial_array_assignment", 
                   "array_assignment", "array_definition", "array_definition_elements", 
                   "array_selector", "dynamic_result", "dynamic_", "int_result", 
                   "float_result", "string_result", "comparison_list", "comparison", 
                   "comp_var", "lvalue", "rvalue", "break_expression", "literal_t", 
                   "float_t", "int_t", "bool_t", "nil_t", "id_", "id_global", 
                   "terminator", "else_token", "crlf" ]

    EOF = Token.EOF
    LITERAL=1
    COMMA=2
    SEMICOLON=3
    CRLF=4
    REQUIRE=5
    END=6
    DEF=7
    RETURN=8
    IF=9
    ELSE=10
    ELSIF=11
    UNLESS=12
    WHILE=13
    RETRY=14
    BREAK=15
    FOR=16
    TRUE=17
    FALSE=18
    PLUS=19
    MINUS=20
    MUL=21
    DIV=22
    MOD=23
    EXP=24
    EQUAL=25
    NOT_EQUAL=26
    GREATER=27
    LESS=28
    LESS_EQUAL=29
    GREATER_EQUAL=30
    ASSIGN=31
    PLUS_ASSIGN=32
    MINUS_ASSIGN=33
    MUL_ASSIGN=34
    DIV_ASSIGN=35
    MOD_ASSIGN=36
    EXP_ASSIGN=37
    AND=38
    OR=39
    NOT=40
    LEFT_RBRACKET=41
    RIGHT_RBRACKET=42
    LEFT_SBRACKET=43
    RIGHT_SBRACKET=44
    NIL=45
    SINGLE_LINE_COMMENT=46
    MULTI_LINE_COMMENT=47
    WHITE_SPACE=48
    INT=49
    FLOAT=50
    ID=51
    ID_GLOBAL=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_list(self):
            return self.getTypedRuleContext(RubyParser.Expression_listContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = RubyParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.expression_list(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(RubyParser.ExpressionContext,0)


        def terminator(self):
            return self.getTypedRuleContext(RubyParser.TerminatorContext,0)


        def expression_list(self):
            return self.getTypedRuleContext(RubyParser.Expression_listContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_expression_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_list" ):
                listener.enterExpression_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_list" ):
                listener.exitExpression_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_list" ):
                return visitor.visitExpression_list(self)
            else:
                return visitor.visitChildren(self)



    def expression_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RubyParser.Expression_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expression_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RubyParser.LITERAL, RubyParser.DEF, RubyParser.RETURN, RubyParser.IF, RubyParser.UNLESS, RubyParser.WHILE, RubyParser.FOR, RubyParser.TRUE, RubyParser.FALSE, RubyParser.NOT, RubyParser.LEFT_RBRACKET, RubyParser.NIL, RubyParser.INT, RubyParser.FLOAT, RubyParser.ID, RubyParser.ID_GLOBAL]:
                self.state = 139
                self.expression()
                self.state = 140
                self.terminator(0)
                pass
            elif token in [RubyParser.SEMICOLON, RubyParser.CRLF]:
                self.state = 142
                self.terminator(0)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 151
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = RubyParser.Expression_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression_list)
                    self.state = 145
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 146
                    self.expression()
                    self.state = 147
                    self.terminator(0) 
                self.state = 153
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_definition(self):
            return self.getTypedRuleContext(RubyParser.Function_definitionContext,0)


        def function_inline_call(self):
            return self.getTypedRuleContext(RubyParser.Function_inline_callContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(RubyParser.If_statementContext,0)


        def unless_statement(self):
            return self.getTypedRuleContext(RubyParser.Unless_statementContext,0)


        def rvalue(self):
            return self.getTypedRuleContext(RubyParser.RvalueContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(RubyParser.Return_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(RubyParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(RubyParser.For_statementContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = RubyParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.function_definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.function_inline_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.if_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 157
                self.unless_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 158
                self.rvalue(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 159
                self.return_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 160
                self.while_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 161
                self.for_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_getContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.var_name = None # LvalueContext
            self.op = None # Token
            self.global_name = None # Id_globalContext

        def lvalue(self):
            return self.getTypedRuleContext(RubyParser.LvalueContext,0)


        def ASSIGN(self):
            return self.getToken(RubyParser.ASSIGN, 0)

        def id_global(self):
            return self.getTypedRuleContext(RubyParser.Id_globalContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_global_get

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_get" ):
                listener.enterGlobal_get(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_get" ):
                listener.exitGlobal_get(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_get" ):
                return visitor.visitGlobal_get(self)
            else:
                return visitor.visitChildren(self)




    def global_get(self):

        localctx = RubyParser.Global_getContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_global_get)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            localctx.var_name = self.lvalue()
            self.state = 165
            localctx.op = self.match(RubyParser.ASSIGN)
            self.state = 166
            localctx.global_name = self.id_global()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_setContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.global_name = None # Id_globalContext
            self.op = None # Token
            self.result = None # All_resultContext

        def id_global(self):
            return self.getTypedRuleContext(RubyParser.Id_globalContext,0)


        def ASSIGN(self):
            return self.getToken(RubyParser.ASSIGN, 0)

        def all_result(self):
            return self.getTypedRuleContext(RubyParser.All_resultContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_global_set

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_set" ):
                listener.enterGlobal_set(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_set" ):
                listener.exitGlobal_set(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_set" ):
                return visitor.visitGlobal_set(self)
            else:
                return visitor.visitChildren(self)




    def global_set(self):

        localctx = RubyParser.Global_setContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_global_set)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            localctx.global_name = self.id_global()
            self.state = 169
            localctx.op = self.match(RubyParser.ASSIGN)
            self.state = 170
            localctx.result = self.all_result()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_resultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_global(self):
            return self.getTypedRuleContext(RubyParser.Id_globalContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_global_result

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_result" ):
                listener.enterGlobal_result(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_result" ):
                listener.exitGlobal_result(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_result" ):
                return visitor.visitGlobal_result(self)
            else:
                return visitor.visitChildren(self)




    def global_result(self):

        localctx = RubyParser.Global_resultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_global_result)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.id_global()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_inline_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_call(self):
            return self.getTypedRuleContext(RubyParser.Function_callContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_function_inline_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_inline_call" ):
                listener.enterFunction_inline_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_inline_call" ):
                listener.exitFunction_inline_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_inline_call" ):
                return visitor.visitFunction_inline_call(self)
            else:
                return visitor.visitChildren(self)




    def function_inline_call(self):

        localctx = RubyParser.Function_inline_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_inline_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.function_call()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_definition_header(self):
            return self.getTypedRuleContext(RubyParser.Function_definition_headerContext,0)


        def function_definition_body(self):
            return self.getTypedRuleContext(RubyParser.Function_definition_bodyContext,0)


        def END(self):
            return self.getToken(RubyParser.END, 0)

        def getRuleIndex(self):
            return RubyParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_definition" ):
                return visitor.visitFunction_definition(self)
            else:
                return visitor.visitChildren(self)




    def function_definition(self):

        localctx = RubyParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.function_definition_header()
            self.state = 177
            self.function_definition_body()
            self.state = 178
            self.match(RubyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definition_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_list(self):
            return self.getTypedRuleContext(RubyParser.Expression_listContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_function_definition_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition_body" ):
                listener.enterFunction_definition_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition_body" ):
                listener.exitFunction_definition_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_definition_body" ):
                return visitor.visitFunction_definition_body(self)
            else:
                return visitor.visitChildren(self)




    def function_definition_body(self):

        localctx = RubyParser.Function_definition_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_definition_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.expression_list(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definition_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(RubyParser.DEF, 0)

        def function_name(self):
            return self.getTypedRuleContext(RubyParser.Function_nameContext,0)


        def crlf(self):
            return self.getTypedRuleContext(RubyParser.CrlfContext,0)


        def function_definition_params(self):
            return self.getTypedRuleContext(RubyParser.Function_definition_paramsContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_function_definition_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition_header" ):
                listener.enterFunction_definition_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition_header" ):
                listener.exitFunction_definition_header(self)
